<resources>
    <string name="app_name">spirits and wine app</string>
    <string name="get_your_favourite_spirits_and_wine">Get your favourite Spirits and Wine</string>
    <string name="wines_and_spirits">Wines And Spirits</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>\
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logged_in_as_user">Logged In As User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="one_cuisine_type">One Cuisine Type</string>
    <string name="spiritsandwine_name">SpiritsandWine Name</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="user_name">User Name</string>


</resources>