<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="5dp" />


    <EditText
        android:id="@+id/passWordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/confirmPassWordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/findRestaurantsButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="460dp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>