<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SpiritsAndWineDetailsFragment">


    <ImageView
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:id="@+id/spiritsandwineImageView"
        android:src="@drawable/jus"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spiritsandwineNameTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/spiritsandwine_name"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_cuisine_type"
            android:id="@+id/firstBrewedTextView"
            android:textStyle="italic"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:id="@+id/pHTextView"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>